# music_sync

./: .gitignore  pyproject.toml
music_sync/: config.py  models.py  spotify_auth.py  spotify_client.py  web_app.py
music_sync/templates/: index.html.jinja  spotify.html.jinja
