[tool.poetry]
name = "music-sync"
version = "0.1.0"
description = ""
authors = ["Aaron Kurtz <kurtzam@gmail.com>"]
readme = "README.md"
packages = [{include = "music_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
pydantic = "^2.1.1"
pkce = "^1.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
